kubernetes/apps/default/immich/app/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: immich
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`photos.f9.casa`)
      kind: Rule
      services:
        - name: immich
          port: 2283
      middlewares:
        - name: default-headers
          namespace: traefik
